--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
+
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=1200">
-  <title>Programme des séances</title>
+<meta charset="utf-8"/>
+<meta content="width=1200" name="viewport"/>
+<title>Programme des séances</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheetontent="Chercher des heures de séances de films au Cinéma Centre-Ville">
-  <style>
+<style>
     body {
       font-family: 'Roboto', sans-serif;
       background-color: #000;
@@ -167,25 +168,51 @@
       background-color: #0099cc;
     }
   </style>
-</head>
+<style>
+.seances {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.ligne-seances {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  flex-wrap: wrap;
+  margin-bottom: 10px;
+}
+.date-label {
+  font-weight: bold;
+  color: black;
+  background-color: transparent;
+  padding: 6px 0;
+  min-width: 160px;
+}
+.seance-bouton {
+  background-color: #00bfff;
+  color: white;
+  border: none;
+  padding: 6px 12px;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 14px;
+  transition: background-color 0.2s;
+}
+.seance-bouton:hover {
+  background-color: #0099cc;
+}
+</style></head>
 <body>
-  <header>
-    <a href="https://www.cine-flash.com/">
-      <img src="https://veeziustaskscm.blob.core.windows.net/veezi-ticketing-assets/jjwk2hm92x8zmdt4ys4sr1vvp0/banner?202508291726"
-           alt="Cinéma centre-ville Laser par BARCO"
-           width="1200" height="380">
-    </a>
-  </header>
-
-  <div class="date" id="date"></div>
-
-  <div class="legende" id="legende"></div>
-
-  <hr>
-
-  <div class="grid" id="films"></div>
-
-  <script>
+<header>
+<a href="https://www.cine-flash.com/">
+<img alt="Cinéma centre-ville Laser par BARCO" height="380" src="https://veeziustaskscm.blob.core.windows.net/veezi-ticketing-assets/jjwk2hm92x8zmdt4ys4sr1vvp0/banner?202508291726" width="1200"/>
+</a>
+</header>
+<div class="date" id="date"></div>
+<div class="legende" id="legende"></div>
+<hr/>
+<div class="grid" id="films"></div>
+<script>
     const jours = ["Dimanche", "Lundi", "Mardi", "Mercredi", "Jeudi", "Vendredi", "Samedi"];
     const mois = ["Janvier", "Février", "Mars", "Avril", "Mai", "Juin", "Juillet", "Août", "Septembre", "Octobre", "Novembre", "Décembre"];
     const aujourdHui = new Date();
@@ -327,5 +354,57 @@
         console.error("Erreur lors du chargement du fichier films.json :", error);
       });
   </script>
-</body>
+<script>
+const seancesDiv = document.createElement("div");
+seancesDiv.className = "seances";
+
+// Grouper les séances par date
+const seancesParDate = {};
+
+film.horaire.forEach(seance => {
+  const parts = seance.horaire.split(" ");
+  const dateStr = parts[0];
+  const heure = parts[1];
+  const attributs = parts.slice(2).sort();
+
+  if (!seancesParDate[dateStr]) {
+    seancesParDate[dateStr] = [];
+  }
+
+  seancesParDate[dateStr].push({ heure, attributs });
+});
+
+// Afficher les journées ligne par ligne
+Object.entries(seancesParDate).forEach(([dateStr, seances]) => {
+  const dateObj = new Date(dateStr);
+  const optionsJour = { weekday: 'long' };
+  const optionsJourNum = { day: 'numeric' };
+  const optionsMois = { month: 'long' };
+
+  const jour = dateObj.toLocaleDateString('fr-CA', optionsJour);
+  const jourNum = dateObj.toLocaleDateString('fr-CA', optionsJourNum);
+  const mois = dateObj.toLocaleDateString('fr-CA', optionsMois);
+
+  const ligneDiv = document.createElement("div");
+  ligneDiv.className = "ligne-seances";
+
+  const dateLabel = document.createElement("span");
+  dateLabel.className = "date-label";
+  dateLabel.textContent = `${jour.charAt(0).toUpperCase() + jour.slice(1)} ${jourNum}, ${mois}`;
+
+  ligneDiv.appendChild(dateLabel);
+
+  seances.forEach(({ heure, attributs }) => {
+    const bouton = document.createElement("button");
+    bouton.className = "seance-bouton";
+    bouton.textContent = `${heure} ${attributs.join(" ")}`;
+    ligneDiv.appendChild(bouton);
+  });
+
+  seancesDiv.appendChild(ligneDiv);
+});
+
+// Ajouter les séances à un conteneur spécifique ou au body
+document.body.appendChild(seancesDiv);
+</script></body>
 </html>
