--- a/index.html
+++ b/index.html
@@ -213,8 +213,8 @@
 <hr/>
 <div class="grid" id="films"></div>
 <script>
-    const jours = ["Dimanche", "Lundi", "Mardi", "Mercredi", "Jeudi", "Vendredi", "Samedi"];
-    const mois = ["Janvier", "Février", "Mars", "Avril", "Mai", "Juin", "Juillet", "Août", "Septembre", "Octobre", "Novembre", "Décembre"];
+    const jours = ["dimanche", "lundi", "mardi", "mercredi", "jeudi", "vendredi", "samedi"];
+    const mois = ["janvier", "février", "mars", "avril", "mai", "juin", "juillet", "août", "septembre", "octobre", "novembre", "décembre"];
     const aujourdHui = new Date();
     const jourNom = jours[aujourdHui.getDay()];
     const jourNum = aujourdHui.getDate();
