--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8"/>
 <meta content="width=1200" name="viewport"/>
 <title>Programme des séances</title>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheetontent="Chercher des heures de séances de films au Cinéma Centre-Ville">
+<link au="" centre-ville"="" chercher="" cinéma="" de="" des="" films="" heures="" href="https://fonts.googleapis.com/css2?family=Roboto&amp;display=swap" rel="stylesheetontent=" séances=""/>
 <style>
     body {
       font-family: 'Roboto', sans-serif;
@@ -167,7 +167,8 @@
     .seance-bouton:hover {
       background-color: #0099cc;
     }
-  </style>
+  
+.date-label { color: black !important; }</style>
 <style>
 .seances {
   display: flex;
