--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
     }
 
     .date-label {
+  color: black !important;
       font-weight: bold;
       color: black;
       background-color: transparent;
@@ -154,6 +155,7 @@
     }
 
     .seance-bouton {
+  color: white !important;
       background-color: #00bfff;
       color: white;
       border: none;
@@ -168,8 +170,10 @@
       background-color: #0099cc;
     }
   
-.date-label { color: black !important; }
+.date-label {
+  color: black !important; color: black !important; }
 .seance-bouton {
+  color: white !important;
     background-color: #00bfff;
     color: white !important;
     border: none;
@@ -327,7 +331,7 @@
 
           // Afficher les séances regroupées
           Object.entries(seancesParDate).forEach(([dateStr, seances]) => {
-          const dateObj = new Date(dateStr);
+          const dateObj = new Date(dateStr + 'T00:00:00');
           const optionsJour = { weekday: 'long' };
           const optionsJourNum = { day: 'numeric' };
           const optionsMois = { month: 'long' };
@@ -388,7 +392,7 @@ film.horaire.forEach(seance => {
 
 // Afficher les journées ligne par ligne
 Object.entries(seancesParDate).forEach(([dateStr, seances]) => {
-  const dateObj = new Date(dateStr);
+  const dateObj = new Date(dateStr + 'T00:00:00');
   const optionsJour = { weekday: 'long' };
   const optionsJourNum = { day: 'numeric' };
   const optionsMois = { month: 'long' };
