--- a/index.html
+++ b/index.html
@@ -183,6 +183,24 @@
     font-size: 14px;
     transition: background-color 0.2s;
 }
+
+.jour-label {
+    color: #000000;
+    font-weight: bold;
+    margin-top: 20px;
+    margin-bottom: 10px;
+}
+.horaire {
+    background-color: #CCCCCC;
+    color: #6F6F6F;
+    padding: 5px 10px;
+    margin-right: 10px;
+    display: inline-block;
+    border-radius: 4px;
+}
+.horaires-container {
+    margin-bottom: 15px;
+}
 </style>
 <style>
 .seances {
