--- a/index.html
+++ b/index.html
@@ -6,64 +6,8 @@
 <meta content="width=1200" name="viewport"/>
 <title>Programme des séances</title>
 <link au="" centre-ville"="" chercher="" cinéma="" de="" des="" films="" heures="" href="https://fonts.googleapis.com/css2?family=Roboto&amp;display=swap" rel="stylesheetontent=" séances=""/>
-<style>
-.card {
-    border: 1px solid #ccc;
-    padding: 15px;
-    margin: 15px 0;
-    background-color: #f9f9f9;
-}
-
-.jour-label {
-    font-weight: bold;
-    color: #000000;
-    margin-bottom: 5px;
-    text-transform: capitalize;
-}
-
-.horaire {
-    display: inline-block;
-    background-color: #CCCCCC;
-    color: #6F6F6F;
-    padding: 5px 10px;
-    margin: 5px;
-    border-radius: 4px;
-    font-size: 14px;
-}
-
-.seances {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-}
-.ligne-seances {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-  flex-wrap: wrap;
-  margin-bottom: 10px;
-}
-.date-label {
-  font-weight: bold;
-  color: black;
-  background-color: transparent;
-  padding: 6px 0;
-  min-width: 160px;
-}
-.seance-bouton {
-  background-color: #00bfff;
-  color: white;
-  border: none;
-  padding: 6px 12px;
-  border-radius: 4px;
-  cursor: pointer;
-  font-size: 14px;
-  transition: background-color 0.2s;
-}
-.seance-bouton:hover {
-  background-color: #0099cc;
-}
-</style></head>
+style.css
+</head>
 <body>
 <header>
 <a href="https://www.cine-flash.com/">
