--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
-
 <html lang="fr">
 <head>
-<meta charset="utf-8"/>
-<meta content="width=1200" name="viewport"/>
-<title>Programme des séances</title>
-<link au="" centre-ville"="" chercher="" cinéma="" de="" des="" films="" heures="" href="https://fonts.googleapis.com/css2?family=Roboto&amp;display=swap" rel="stylesheetontent=" séances=""/>
-style.css
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Programme des séances</title>
+
+    <!-- Import de la police Roboto -->
+    <link href="s.googleapis.com/css2?family=Roboto&display=swap
+
+    <!-- Lien vers ton fichier CSS -->
+    style.css
 </head>
 <body>
 <header>
