--- a/index.html
+++ b/index.html
@@ -12,11 +12,15 @@
     style.css
 </head>
 <body>
+
 <header>
-<a href="https://www.cine-flash.com/">
-<img alt="Cinéma centre-ville Laser par BARCO" height="380" src="https://veeziustaskscm.blob.core.windows.net/veezi-ticketing-assets/jjwk2hm92x8zmdt4ys4sr1vvp0/banner?202508291726" width="1200"/>
-</a>
+    <div class="banner-container">
+        https://www.cine-flash.com/
+            https://veeziustaskscm.blob.core.windows.net/veezi-ticketing-assets/jjwk2hm92x8zmdt4ys4sr1vvp0/banner?202508291726
+        </a>
+    </div>
 </header>
+
 <div class="legende" id="legende"></div>
 <hr/>
 <div class="grid" id="films"></div>
