--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Programme des séances</title>
 
     <!-- Import de la police Roboto -->
-    <link href="s.googleapis.com/css2?family=Roboto&display=swap
+    https://fonts.googleapis.com/css2?family=Roboto&display=swap
 
     <!-- Lien vers ton fichier CSS -->
     style.css
@@ -16,13 +16,18 @@
 <header>
     <div class="banner-container">
         https://www.cine-flash.com/
-            https://veeziustaskscm.blob.core.windows.net/veezi-ticketing-assets/jjwk2hm92x8zmdt4ys4sr1vvp0/banner?202508291726  </a>
+            https://veeziustaskscm.blob.core.windows.net/veezi-ticketing-assets/jjwk2hm92x8zmdt4ys4sr1vvp0/banner?202508291726
+        </a>
     </div>
 </header>
 
 <div class="legende" id="legende"></div>
 <hr/>
 <div class="grid" id="films"></div>
+
+</body>
+</html>
+
 <script>
       fetch("films.json")
       .then(response => response.json())
