--- a/index.html
+++ b/index.html
@@ -3,12 +3,9 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Programme des séances</title>
+    <title>Horeaire des films au Cinéma centreville</title>
 
-    <!-- Import de la police Roboto -->
-    https://fonts.googleapis.com/css2?family=Roboto&display=swap
-
-    <!-- Lien vers ton fichier CSS -->
+    <!-- Lien vers fichier CSS -->
     style.css
 </head>
 <body>
