--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
           const jourLabel = document.createElement("div");
           jourLabel.className = "jour-label";
-          jourLabel.textContent = `${jour.charAt(0).toUpperCase() + jour.slice(1).toLowerCase()} ${jourNum}, ${mois.toLowerCase()}`;
+          jourLabel.textContent = `${jour.toLowerCase()} ${jourNum}, ${mois.toLowerCase()}`;
 
           const horairesDiv = document.createElement("div");
           horairesDiv.className = "horaires";
