--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Horeaire des films au Cinéma centreville</title>
+    <title>Horeaire des films au Cinéma centre-ville</title>
 
     <!-- Lien vers fichier CSS -->
     style.css
