--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 							if (film.classification) {
     							const rating = document.createElement("span");
     							rating.className = "rating";
-    							rating.textContent = `${film.classification.slice(0, 3)} `;
+    							rating.textContent = `${film.classification} `;
     							contentBlock.appendChild(rating);
 							}
 
@@ -175,6 +175,7 @@
 		</script>
 	</body>
 </html>
+
 
 
 
