--- a/index.html
+++ b/index.html
@@ -69,20 +69,67 @@
 						if (film.classification || film.content) {
 							const contentBlock = document.createElement("div");
 
-							if (film.classification) {
-    							const rating = document.createElement("span");
-    							rating.className = "rating";
-    							rating.textContent = `${film.classification} `;
-    							contentBlock.appendChild(rating);
-							}
+							if (film.classification || film.content) {
+    							const contentBlock = document.createElement("div");
 
-							if (film.content) {
-								const content = document.createElement("span");
-								content.className = "content";
-								content.textContent = ` ${film.content}`;
-								contentBlock.appendChild(content);
-							}
-							details.appendChild(contentBlock);
+    						if (film.classification) {
+        						const rating = document.createElement("span");
+        						rating.className = "rating";
+        						rating.textContent = `${film.classification} `;
+        						contentBlock.appendChild(rating);
+    						}
+
+    						if (film.content) {
+        						const content = document.createElement("span");
+        						content.className = "content";
+        						content.textContent = ` ${film.content}`;
+        						contentBlock.appendChild(content);
+    						}
+
+    						// Génération du nom de fichier
+    						function normalizeText(text) {
+        						return text
+            						.normalize("NFD")
+            						.replace(/[\u0300-\u036f]/g, "")
+            						.replace(/\s+/g, "")
+            						.replace(/[^a-zA-Z0-9+]/g, "");
+    						}
+
+    						function generateImageFilename(film) {
+        						let base = normalizeText(film.classification || "");
+
+        					const motsCles = [
+            					"Déconseillé aux jeunes enfants",
+            					"Erostisme",
+            					"Exempte de classement",
+            					"Horreur",
+            					"Langage Vulgaire",
+            					"Pour Enfants",
+            					"Sexualité Explicite"
+        					];
+
+					        if (film.content) {
+            					motsCles.forEach(mot => {
+                				if (film.content.includes(mot)) {
+                    			base += normalizeText(mot);
+              	  			}
+            			});
+        				}			
+
+        					const filename = base + "RGB.jpg";
+        					console.log("Nom de fichier image généré :", filename); // Debug
+        					return filename;
+    					}
+
+    					// Création et insertion de l'image
+    					const imageFilename = generateImageFilename(film);
+    					const image = document.createElement("img");
+    					image.src = `images/${imageFilename}`; // Chemin relatif à ton dossier
+    					image.alt = "Classification visuelle";
+    					image.className = "classification-image"; // Pour styliser si besoin
+
+    					contentBlock.appendChild(image);
+    					details.appendChild(contentBlock);
 						}
 
 						if (film.synopsis) {
@@ -175,6 +222,7 @@
 		</script>
 	</body>
 </html>
+
 
 
 
