--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     					// Création et insertion de l'image
     					const imageFilename = generateImageFilename(film);
     					const image = document.createElement("img");
-    					image.src = `images/${imageFilename}`; // Chemin relatif à ton dossier
+    					image.src = `classification/${imageFilename}`; // Chemin relatif à ton dossier
     					image.alt = "Classification visuelle";
     					image.className = "classification-image"; // Pour styliser si besoin
 
@@ -222,6 +222,7 @@
 		</script>
 	</body>
 </html>
+
 
 
 
