--- a/index.html
+++ b/index.html
@@ -105,7 +105,8 @@
             					"Horreur",
             					"Langage Vulgaire",
             					"Pour Enfants",
-            					"Sexualité Explicite"
+            					"Sexualité Explicite",
+								"Violence"
         					];
 
 					        if (film.content) {
@@ -222,6 +223,7 @@
 		</script>
 	</body>
 </html>
+
 
 
 
