--- a/index.html
+++ b/index.html
@@ -126,7 +126,8 @@
     					image.alt = "Classification visuelle";
     					image.className = "classification-image"; // Pour styliser si besoin
 
-    					contentBlock.appendChild(image);
+    					// contentBlock.appendChild(image);
+						card.appendChild(image);
     					details.appendChild(contentBlock);
 						}
 
@@ -220,6 +221,7 @@
 		</script>
 	</body>
 </html>
+
 
 
 
