--- a/index.html
+++ b/index.html
@@ -99,11 +99,11 @@
             					"Déconseillé aux jeunes enfants",
             					"Erostisme",
             					"Exempte de classement",
+								"Violence",
             					"Horreur",
             					"Langage Vulgaire",
             					"Pour Enfants",
-            					"Sexualité Explicite",
-								"Violence"
+            					"Sexualité Explicite"
         					];
 
 					        if (film.content) {
@@ -221,6 +221,7 @@
 		</script>
 	</body>
 </html>
+
 
 
 
