--- a/index.html
+++ b/index.html
@@ -132,9 +132,7 @@
     					image.alt = "Classification visuelle";
     					image.className = "classification-image"; // Pour styliser si besoin
 
-    					// contentBlock.appendChild(image);
-						card.appendChild(image);
-    					details.appendChild(contentBlock);
+						poster.appendChild(image);
 						}
 
 						if (film.synopsis) {
@@ -227,6 +225,7 @@
 		</script>
 	</body>
 </html>
+
 
 
 
